--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
