--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-router-dom": "^7.9.1",
     "serve": "^14.2.5",
     "sonner": "^2.0.7",
+    "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
